RESOLVED FIXED306363
[GTK] GtkEventMotionController does not use a GdkCrossingMode parameters in enter/leave signals
https://bugs.webkit.org/show_bug.cgi?id=306363
Summary [GTK] GtkEventMotionController does not use a GdkCrossingMode parameters in e...
Adrian Perez
Reported 2026-01-27 13:15:34 PST
In Source/WebKit/UIProcess/API/gtk/WebKitWebViewBase.cpp the webkitWebViewBaseEnter() and webkitWebViewBaseLeave() functions have a GdkCrossingMode parameter, but the signal definitions do NOT include such parameter, as per - https://docs.gtk.org/gtk4/signal.EventControllerMotion.enter.html - https://docs.gtk.org/gtk4/signal.EventControllerMotion.leave.html See also: https://github.com/pizlonator/fil-c/commit/aba25c12389dd54080e382898b8fe0cea52289b3#diff-c077743225c1288b8b4f206f74222ffe5a3bc1aa6a5c29fc0b1b0396d2aed847R1765
Attachments
Adrian Perez
Comment 1 2026-01-27 13:19:11 PST
EWS
Comment 2 2026-01-27 15:53:07 PST
Committed 306312@main (f36ee73ea171): <https://commits.webkit.org/306312@main> Reviewed commits have been landed. Closing PR #57348 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.