[GTK] GtkEventMotionController does not use GdkCrossingMode parameters in enter/leave signals https://bugs.webkit.org/show_bug.cgi?id=306363

Reviewed by Patrick Griffis.

Remove the GdkCrossingMode parameter from the definitions of the
webkitWebViewBaseEnter() and webkitWebViewBaseLeave() functions,
given that the GtkEventMotionController::enter and ::leave signals
do not include such parameter in their definitions.

Based on a patch by Saam Barati <sbarati@apple.com>

* Source/WebKit/UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseEnter): Remove incorrect GdkCrossingMode parameter.
(webkitWebViewBaseLeave): Ditto.

Canonical link: https://commits.webkit.org/306312@main